# collect-filter-folders

./: Cargo.toml
src/: main.rs
